Bug 1681357 - Use regional prefs locale if locale is not specified in GetDateTimePattern; r=zbraniecki

Differential Revision: https://phabricator.services.mozilla.com/D99241